# i-kinematics_Archived

./: CMakeLists.txt  IKinematics.cpp  IKinematics.hpp  README.md
cmake/: cmake_uninstall.cmake.in
ikfast/: CMakeLists.txt  ik_ll.cpp  ik_rl.cpp  ikfastRightLeg.cpp  ikfastRightLeg.h
ikfast/leftLeg/: CMakeLists.txt  ikfastLeftLeg.cpp  ikfastLeftLeg.h
initial/: ik_ll.cpp  ik_rl.cpp
kinLeftLeg/: CMakeLists.txt
kinRightLeg/: CMakeLists.txt
