project(kinRightLeg)

add_definitions( -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_NAMESPACE=kinRightLeg)

# source files
aux_source_directory(. LIB_SRCS)
INCLUDE_DIRECTORIES(..)


FILE(GLOB_RECURSE LIB_INCLUDE_LIST *.h *.hpp)

set(SUBDIR_INCLUDE_DIRECTORIES ${SUBDIR_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(SUBDIR_LINK_NAMES ${SUBDIR_LINK_NAMES} ${PROJECT_NAME} PARENT_SCOPE)


ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_SRCS} ${LIB_INCLUDE_LIST})


remove_definitions( -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_NAMESPACE)




